[tool.poetry]
name = "aprender-flask"
version = "0.1.0"
description = ""
authors = ["agarf <fotografofraga@gmail.com>"]
readme = "README.md"
packages = [{include = "aprender_flask"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
